upcxx-2023.9.0/test/neg/neg-serial17.errc
Deserializing a TriviallySerializable type T into storage requires T to be DefaultConstructible
